#269569 Get new generic date filter working again. Still needs more work, but generally functional.

--- a/date.css
+++ b/date.css
@@ -84,6 +84,7 @@ span.date-display-separator {
   float:left !important;
   margin-right:2px !important;
   padding:0 !important;
+  width:12em;
 }
 
 .date-nav {
