--- a/date.css
+++ b/date.css
@@ -95,17 +95,17 @@ span.date-display-separator {
   width:100%;
   display:relative;
 }
-.date-nav div.prev {
+.date-nav div.date-prev {
   text-align: left;
   width:24%;
   float:left;
 }
-.date-nav div.next {
+.date-nav div.date-next {
   text-align: right;
   width:24%;
   float:right;
 }
-.date-nav div.heading {
+.date-nav div.date-heading {
   text-align:center;
   width:50%;
   float:left;
