#272110 Fix select lists in FF3 so they line up instead of stacking. Hopefully this will fix Safari, too.

--- a/date.css
+++ b/date.css
@@ -1,11 +1,18 @@
+/* Force from/to dates to float using inline-block, where it works, otherwise inline. */
 .container-inline-date {
   width:auto;
   clear:both;
+  display: inline-block;
+  vertical-align:top;
+  margin-right: 0.5em;
 }
 .container-inline-date .form-item {
-  float:left;
+  float:none;
   padding:0;
   margin:0;
+}
+.container-inline-date .form-item .form-item {
+  float:left;
 }
 .container-inline-date .form-item,
 .container-inline-date .form-item input {
@@ -19,13 +26,6 @@
 .container-inline-date .form-item select,
 .container-inline-date .form-item option {
   margin-right:5px;}
-
-/* Force from/to dates to float using inline-block, where it works, otherwise inline. */
-.container-inline-date {
-  display: inline-block;
-  vertical-align:top;
-  margin-right: 0.5em;
- }
 
 .container-inline-date .date-spacer {
   margin-left:-5px;
