--- a/date_popup/themes/datepicker.css
+++ b/date_popup/themes/datepicker.css
@@ -1,4 +1,4 @@
-** Reset link properties and then override them with !important */
+/* Reset link properties and then override them with !important */
 #ui-datepicker-div a, .ui-datepicker-inline a {
 	cursor: pointer;
 	margin: 0;
