Improve the template and css for the exposed date filter to keep date parts lined up next to each other.

--- a/date.css
+++ b/date.css
@@ -82,6 +82,9 @@ span.date-display-separator {
   float:none;
 }
 
+.date-views-filter-wrapper {
+  min-width:250px;
+}
 .date-views-filter input {
   float:left !important;
   margin-right:2px !important;
