--- a/date_popup/themes/datepicker.css
+++ b/date_popup/themes/datepicker.css
@@ -172,7 +172,7 @@ img.ui-datepicker-trigger {
 	background-color: #ddd !important;
 }
 
-/* ________ CALENDAR LINKS _______
+/* ________ CALENDAR LINKS _______*/
 
 
 .ui-datepicker-inline .ui-datepicker-links a {
