#367688 Fix date format css to display remove link better, patch by fred0.

--- a/date.css
+++ b/date.css
@@ -165,4 +165,8 @@ span.date-display-separator {
   padding-left: 10px;
 }
 
+.date-container .select-container {
+  clear: left;
+  float: left;
+}
 
